[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Settings/VideoSettings/UIResolutionSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Settings/VideoSettings/UIGeneralSettings.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Components/UISettingCheckbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Settings/VolumeSlider.gd" type="Script" id=4]

[node name="GeneralSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 289.0
margin_top = 147.0
margin_right = -288.0
margin_bottom = -144.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 447.0
margin_bottom = 21.0
text = "Video Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 25.0
margin_right = 447.0
margin_bottom = 29.0

[node name="UIResolutionSelector" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
margin_left = 0.0
margin_top = 33.0
margin_right = 447.0
margin_bottom = 60.0

[node name="UIFullscreenCheckbox" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 0.0
margin_top = 64.0
margin_right = 447.0
margin_bottom = 93.0
title = "Full Screen"

[node name="UIVsyncCheckbox" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 0.0
margin_top = 97.0
margin_right = 447.0
margin_bottom = 126.0
title = "VSync"

[node name="Spacer" type="Control" parent="."]
margin_top = 130.0
margin_right = 447.0
margin_bottom = 155.0
rect_min_size = Vector2( 15, 25 )

[node name="Label2" type="Label" parent="."]
margin_top = 159.0
margin_right = 447.0
margin_bottom = 180.0
text = "Audio Settings"
align = 1

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 184.0
margin_right = 447.0
margin_bottom = 188.0

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 192.0
margin_right = 447.0
margin_bottom = 285.0
custom_constants/vseparation = 15
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 62.0
margin_bottom = 21.0
text = "Master"

[node name="VolumeSlider" type="HSlider" parent="GridContainer"]
margin_left = 72.0
margin_right = 447.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 1.0
script = ExtResource( 4 )

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 36.0
margin_right = 62.0
margin_bottom = 57.0
text = "Sounds"

[node name="VolumeSlider2" type="HSlider" parent="GridContainer"]
margin_left = 72.0
margin_top = 36.0
margin_right = 447.0
margin_bottom = 52.0
size_flags_horizontal = 3
value = 1.0
script = ExtResource( 4 )
audio_bus_name = "SFX"

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 72.0
margin_right = 62.0
margin_bottom = 93.0
text = "Music"

[node name="VolumeSlider3" type="HSlider" parent="GridContainer"]
margin_left = 72.0
margin_top = 72.0
margin_right = 447.0
margin_bottom = 88.0
size_flags_horizontal = 3
value = 1.0
script = ExtResource( 4 )
audio_bus_name = "BGM"

[connection signal="resolution_changed" from="UIResolutionSelector" to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="toggled" from="UIFullscreenCheckbox" to="." method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="toggled" from="UIVsyncCheckbox" to="." method="_on_UIVsyncCheckbox_toggled"]
